--- a/rest-gateway/src/main/resources/application.yml
+++ b/rest-gateway/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://eureka:8010/eureka/
+      defaultZone: http://192.168.99.100:8010/eureka/
 server:
   port: 8080
