--- a/rest-country/Dockerfile
+++ b/rest-country/Dockerfile
@@ -2,4 +2,4 @@ FROM java:8
 ADD rest.jar app.jar
 RUN bash -c 'touch /app.jar'
 EXPOSE 8010
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-jar", "-Dspring.profiles.active=docker", "app.jar"]
